# rust-code-analysis

./: .gitignore  .gitmodules  .pre-commit-audit-config.yaml  .pre-commit-config.yaml  .taskcluster.yml  .typos.toml  Cargo.toml  README.md  build.rs  check-grammar-crate.py  check-grammars-crates.sh  check-submodule.py  check-submodules.sh  check-tree-sitter-crates.sh  index.html  languages.html  metrics.html  print.html  recreate-grammars.sh  split-minimal-tests.py  update-language-bindings.sh  update-submodule.sh  update-sumbodules.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  rust-code-analysis.yml
commands/: index.html  metrics.html  nodes.html  rest.html
data/: c_macros.txt
developers/: index.html  loc.html  new-language.html
enums/: Cargo.toml
enums/data/: c_specials.txt  mac.py  special.py
enums/enum-cli/: Cargo.toml
enums/src/: common.rs  go.rs  json.rs  languages.rs  lib.rs  macros.rs  main.rs  rust.rs
enums/templates/: c_macros.rs  foo.rs  go.go  json.json  rust.rs
generate-grammars/: generate-grammar.sh  generate-mozcpp.sh  generate-mozjs.sh
generate-moz-grammars/: generate-mozcpp.sh  generate-mozjs.sh
rust-code-analysis-book/: .gitignore  book.toml  deploy-to-GitHub-Pages
rust-code-analysis-book/src/: README.md  SUMMARY.md  languages.md  metrics.md
rust-code-analysis-book/src/commands/: README.md  metrics.md  nodes.md  rest.md
rust-code-analysis-book/src/developers/: README.md  loc.md  new-language.md  update-grammars.md
rust-code-analysis-cli/: Cargo.toml  README.md
rust-code-analysis-cli/src/: formats.rs  main.rs
rust-code-analysis-cli/src/web/: comment.rs  function.rs  metrics.rs  server.rs
rust-code-analysis-web/: Cargo.toml  README.md
rust-code-analysis-web/src/: lib.rs  main.rs
rust-code-analysis-web/src/web/: comment.rs  function.rs  metrics.rs  mod.rs  server.rs
src/: alterator.rs  ast.rs  asttools.rs  c_macro.rs  checker.rs  comment_rm.rs  concurrent_files.rs  count.rs  cyclomatic.rs  dump.rs  enums.rs  error.rs  exit.rs  find.rs  find_errors.rs  function.rs  getter.rs  halstead.rs  langs.rs  language.rs  language_c.rs  language_ccomment.rs  language_cpp.rs  language_csharp.rs  language_css.rs  language_go.rs  language_html.rs  language_java.rs  language_javascript.rs  language_mozjs.rs  language_preproc.rs  language_python.rs  language_rust.rs  language_tsx.rs  language_typescript.rs  languages.rs  lib.rs  loc.rs  macros.rs  main.rs  (+12 more)
src/c_langs_macros/: c_macros.rs  c_specials.rs  mod.rs
src/languages/: language_ccomment.rs  language_cpp.rs  language_csharp.rs  language_java.rs  language_javascript.rs  language_kotlin.rs  language_mozjs.rs  language_preproc.rs  language_python.rs  language_rust.rs  language_tsx.rs  language_typescript.rs  mod.rs
src/metrics/: abc.rs  cognitive.rs  cyclomatic.rs  exit.rs  fn_args.rs  halstead.rs  loc.rs  mi.rs  mod.rs  nargs.rs  nom.rs  npa.rs  npm.rs  wmc.rs
src/metrics/exit/: cpp.rs  javascript.rs  mod.rs  mozjs.rs  python.rs  rust.rs  tsx.rs  typescript.rs
src/metrics/loc/: cpp.rs  javascript.rs  mod.rs  mozjs.rs  python.rs  rust.rs  tsx.rs  typescript.rs
src/output/: dump.rs  dump_formats.rs  dump_metrics.rs  dump_ops.rs  mod.rs
src/rca_languages/: language_csharp.rs  language_go.rs  language_html.rs  language_java.rs  language_mozjs.rs  language_preproc.rs  language_python.rs
src/rca_metrics/: halstead.rs
src/web/: alterator.rs  ast.bak.rs  ast.rs  comment.rs  function.rs  metrics.rs  mod.rs  server.rs
tests/: deepspeech_test.rs  pdf_js_test.rs  serde_test.rs  test.rs  test_c.rs
tests/common/: mod.rs
tree-sitter-c/: grammar.js
tree-sitter-c-sharp/corpus/: expressions.txt
tree-sitter-c/src/: grammar.json  node-types.json  parser.c  scanner.cc
tree-sitter-ccomment/: Cargo.toml  grammar.js  index.js  package.json
tree-sitter-ccomment/bindings/node/: binding.cc  index.js
tree-sitter-ccomment/bindings/rust/: README.md  build.rs  lib.rs
tree-sitter-ccomment/src/: grammar.json  node-types.json  parser.c
tree-sitter-ccomments/src/: node-types.json  parser.c  scanner.cc
tree-sitter-cpp/: grammar.js
tree-sitter-cpp/src/: grammar.json  node-types.json
tree-sitter-javascript/src/: parser.c
tree-sitter-mozc/: grammar.js  index.js
tree-sitter-mozc/src/: grammar.json  node-types.json  parser.c
tree-sitter-mozcpp/: Cargo.toml  LICENSE  binding.gyp  grammar.js  package.json
tree-sitter-mozcpp/bindings/node/: binding.cc  index.js
tree-sitter-mozcpp/bindings/rust/: README.md  build.rs  lib.rs
tree-sitter-mozcpp/src/: binding.cc  grammar.json  node-types.json  scanner.c  scanner.cc
tree-sitter-mozjs/: Cargo.toml  binding.gyp  grammar.js  index.js  package.json
tree-sitter-mozjs/bindings/node/: binding.cc  index.js
tree-sitter-mozjs/bindings/rust/: README.md  build.rs  lib.rs
tree-sitter-mozjs/src/: grammar.json  node-types.json  parser.c  scanner.c  tree_sitter_javascript_scanner.c
tree-sitter-preproc/: Cargo.toml  grammar.js  index.js  package.json
tree-sitter-preproc/bindings/node/: binding.cc  index.js
tree-sitter-preproc/bindings/rust/: README.md  lib.rs
tree-sitter-preproc/src/: grammar.json  node-types.json  parser.c  scanner.cc
tree-sitter-python/src/: highlights.json
tree-sitter-rust/src/: parser.c
