[package]
name = "rust-code-analysis"
version = "0.0.24"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
edition = "2021"
repository = "https://github.com/mozilla/rust-code-analysis"
documentation = "https://docs.rs/rust-code-analysis/"
readme = "README.md"
keywords = ["metrics"]
description = "Tool to compute and export code metrics"
license = "MPL-2.0"

[dependencies]
aho-corasick = "^0.7"
crossbeam = { version = "^0.8", features = ["crossbeam-channel"] }
fxhash = "0.2"
globset = "^0.4"
lazy_static = "^1.3"
once_cell = "1.16.0"
num = "^0.4"
num-derive = "^0.3"
num-format = "^0.4"
num-traits = "^0.2"
petgraph = "^0.6"
regex = "^1.7"
serde = { version = "^1.0", features = ["derive"] }
termcolor = "^1.1"
walkdir = "^2.3"

tree-sitter = "=0.20.9"
tree-sitter-java = "=0.20.0"
tree-sitter-typescript = "=0.20.0"
tree-sitter-javascript = "=0.20.0"
tree-sitter-python = "=0.20.0"
tree-sitter-rust = "=0.20.0"
tree-sitter-preproc = { path = "./tree-sitter-preproc", version = "=0.20.0" }
tree-sitter-ccomment = { path = "./tree-sitter-ccomment", version = "=0.20.0" }
tree-sitter-mozcpp = { path = "./tree-sitter-mozcpp", version = "=0.20.1" }
tree-sitter-mozjs = { path = "./tree-sitter-mozjs", version = "=0.20.0" }

[dev-dependencies]
insta = { version = "1.22.0", features = ["yaml"] }
pretty_assertions = "^1.3"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace]
members = ["rust-code-analysis-cli", "rust-code-analysis-web"]
exclude = ["enums"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"
