[package]
name = "rust-code-analysis"
version = "0.0.25"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
edition = "2021"
repository = "https://github.com/mozilla/rust-code-analysis"
documentation = "https://docs.rs/rust-code-analysis/"
readme = "README.md"
keywords = ["metrics"]
description = "Tool to compute and export code metrics"
license = "MPL-2.0"

[dependencies]
aho-corasick = "^1.0"
crossbeam = { version = "^0.8", features = ["crossbeam-channel"] }
globset = "^0.4"
num = "^0.4"
num-derive = "^0.3"
num-format = "^0.4"
num-traits = "^0.2"
petgraph = "^0.6"
regex = "^1.7"
serde = { version = "^1.0", features = ["derive"] }
termcolor = "^1.2"
walkdir = "^2.3"

tree-sitter = "=0.22.6"
tree-sitter-java = "=0.21.0"
tree-sitter-kotlin = "0.3.6"
tree-sitter-typescript = "=0.21.2"
tree-sitter-javascript = "=0.21.4"
tree-sitter-python = "=0.21.0"
tree-sitter-rust = "=0.20.4"
tree-sitter-preproc = { path = "./tree-sitter-preproc", version = "=0.20.1" }
tree-sitter-ccomment = { path = "./tree-sitter-ccomment", version = "=0.20.1" }
tree-sitter-mozcpp = { path = "./tree-sitter-mozcpp", version = "=0.20.2" }
tree-sitter-mozjs = { path = "./tree-sitter-mozjs", version = "=0.20.1" }

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json", "redactions"] }
pretty_assertions = "^1.3"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace]
members = ["rust-code-analysis-cli", "rust-code-analysis-web"]
exclude = ["enums"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"
