[package]
name = "enums"
version = "0.0.1"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
edition = "2021"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
askama = "^0.12"

tree-sitter = "=0.22.6"
tree-sitter-java = "=0.21.0"
tree-sitter-kotlin = "0.3.6"
tree-sitter-typescript = "=0.21.2"
tree-sitter-javascript = "=0.21.4"
tree-sitter-python = "=0.21.0"
tree-sitter-rust = "=0.23.0"
tree-sitter-preproc = { path = "../tree-sitter-preproc", version = "=0.20.2" }
tree-sitter-ccomment = { path = "../tree-sitter-ccomment", version = "=0.20.2" }
tree-sitter-mozcpp = { path = "../tree-sitter-mozcpp", version = "=0.20.3" }
tree-sitter-mozjs = { path = "../tree-sitter-mozjs", version = "=0.20.2" }

[profile.release]
strip = "debuginfo"
