[package]
name = "rust-code-analysis-cli"
version = "0.0.18"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
edition = "2018"
keywords = ["metrics"]
description = "Tool to compute and export code metrics"
license = "MPL-2.0"

[dependencies]
actix-rt = "^1.0"
actix-web = "^2.0"
bytes = "^0.5"
clap = "^2.33"
crossbeam = "^0.7"
futures = "^0.3"
globset = "^0.4"
num_cpus = "^1.13"
regex = "^1.1"
rust-code-analysis = { path = "..", version = "0.0"}
serde = "^1.0"
serde_cbor = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.8"
toml = "^0.5"
walkdir = "^2.2"

[dev-dependencies]
pretty_assertions = "^0.6"
