[package]
name = "rust-code-analysis-cli"
version = "0.0.24"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
repository = "https://github.com/mozilla/rust-code-analysis/blob/master/rust-code-analysis-cli/"
edition = "2021"
keywords = ["metrics"]
description = "Tool to compute and export code metrics"
license = "MPL-2.0"

[[bin]]
name = "rust-code-analysis-cli"

[dependencies]
clap = { version = "^3.0", features = ["cargo"] }
globset = "^0.4"
num_cpus = "^1.13"
regex = "^1.5"
rust-code-analysis = { path = "..", version = "0.0"}
serde = "^1.0"
serde_cbor = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.8"
toml = "^0.5"

[profile.release]
strip = "debuginfo"
