[package]
name = "rust-code-analysis-web"
version = "0.0.24"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
edition = "2021"
repository = "https://github.com/mozilla/rust-code-analysis/tree/master/rust-code-analysis-web"
keywords = ["metrics"]
description = "Run a web service to compute and export code metrics"
license = "MPL-2.0"

[[bin]]
name = "rust-code-analysis-web"

[dependencies]
actix-rt = "^2.6"
actix-web = "^4.1"
clap = { version = "^3.1", features = ["derive"] }
futures = "^0.3"
rust-code-analysis = { path = "..", version = "0.0" }
serde = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
pretty_assertions = "^1.0"
