[package]
name = "tree-sitter-ccomment"
description = "Ccomment grammar for the tree-sitter parsing library"
version = "0.20.3"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "ccomment"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mozilla/rust-code-analysis"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language="0.1.0"

[build-dependencies]
cc = "^1.0"

[dev-dependencies]
tree-sitter = "=0.25.3"
