[package]
name = "tree-sitter-mozcpp"
description = "Mozcpp grammar for the tree-sitter parsing library"
version = "0.17.0"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "mozcpp"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-mozcpp"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "^0.17"

[build-dependencies]
cc = "^1.0"
# This dependency is not used at all for this crate, but it is here so that
# dependabot can send notifications when there are updates for this grammar
tree-sitter-cpp = "^0.19"
