[package]
name = "tree-sitter-mozjs"
description = "Mozjs grammar for the tree-sitter parsing library"
version = "0.19.0"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "mozjs"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mozilla/rust-code-analysis"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.5"

[build-dependencies]
cc = "^1.0"
# This dependency is not used at all for this crate, but it is here so that
# dependabot can send notifications when there are updates for this grammar
tree-sitter-javascript = "0.19.0"

[package.metadata.cargo-udeps.ignore]
build = ["tree-sitter-javascript"]
