[package]
name = "tree-sitter-preproc"
description = "Preproc grammar for the tree-sitter parsing library"
version = "0.20.2"
authors = ["Calixte Denizet <cdenizet@mozilla.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "preproc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mozilla/rust-code-analysis"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "=0.22.6"

[build-dependencies]
cc = "^1.0"
